--- a/examples/test.ini
+++ b/examples/test.ini
@@ -1,4 +1,5 @@
 ; This is a comment, these won't be moved to the final .json product
+# This is another comment!
 [user_1]
 name="John Doe"
 email="test@github.com"
